--- a/Palestra/Palestra/bin/Palestra.dll.config
+++ b/Palestra/Palestra/bin/Palestra.dll.config
@@ -14,6 +14,7 @@
     <add name="TDCbd" connectionString="Database=tdc;Data Source=localhost;User Id=root; Password=root" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
