--- a/Palestra/Palestra/Palestra.csproj
+++ b/Palestra/Palestra/Palestra.csproj
@@ -132,11 +132,13 @@
   <ItemGroup>
     <Compile Include="Aplicacao\PalestraAplicacao.cs" />
     <Compile Include="Aplicacao\PalestranteAplicacao.cs" />
+    <Compile Include="Aplicacao\UsuarioAplicacao.cs" />
     <Compile Include="Aplicacao\SalaAplicacao.cs" />
     <Compile Include="Aplicacao\TrilhaAplicacao.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\Api\SalaController.cs" />
+    <Compile Include="Controllers\Api\TrilhaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PalestController.cs" />
     <Compile Include="Controllers\SalaController.cs" />
@@ -151,6 +153,7 @@
     <Compile Include="Models\Sala.cs" />
     <Compile Include="Models\Palestras.cs" />
     <Compile Include="Models\Trilha.cs" />
+    <Compile Include="Models\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio\Contexto.cs" />
   </ItemGroup>
